--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,6 @@
 .distill-site-nav {
   color: rgba(255, 255, 255, 0.8);
-  background-color: #FF99FF;
+  background-color: #FF99CC;
   font-size: 15px;
   font-weight: 400;
 }
@@ -15,6 +15,7 @@
 }
 
 .distill-site-header {
+
 }
 
 .distill-site-footer {
