--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .distill-site-nav {
   color: rgba(255, 255, 255, 0.8);
-  background-color: #FF99CC;
+  background-color: #FF66FF;
   font-size: 15px;
   font-weight: 400;
 }
